@@ -30,6 +30,11 @@ typedef struct {
     int            pos;
 } FBZeroInfo_t;
 
+typedef struct {
+    int            packets;
+    int            which;
+} QUIC5xInfo_t;
+
 /******************************************************************************/
 LOCAL int quic_chlo_parser(MolochSession_t *session, BSB dbsb) {
 
@@ -211,6 +216,28 @@ LOCAL int quic_4648_udp_parser(MolochSession_t *session, void *UNUSED(uw), const
     return 0;
 }
 /******************************************************************************/
+// Headers are encrypted?
+LOCAL int quic_5x_udp_parser(MolochSession_t *session, void *uw, const unsigned char *data, int len, int which)
+{
+    if (len < 20 || memcmp(data+1, "Q05", 3) != 0) {
+        return MOLOCH_PARSER_UNREGISTER;
+    }
+
+    QUIC5xInfo_t *info = (QUIC5xInfo_t *)uw;
+
+    info->which |= (1 << which);
+
+    if (info->which == 0x3) {
+        moloch_session_add_protocol(session, "quic");
+        return MOLOCH_PARSER_UNREGISTER;
+    }
+    info->packets++;
+    if (info->packets > 20)
+        return MOLOCH_PARSER_UNREGISTER;
+
+    return 0;
+}
+/******************************************************************************/
 LOCAL void quic_2445_udp_classify(MolochSession_t *session, const unsigned char *data, int len, int UNUSED(which), void *UNUSED(uw))
 {
     if (len > 100 && (data[0] & 0x83) == 0x01) {
@@ -222,6 +249,23 @@ LOCAL void quic_4648_udp_classify(MolochSession_t *session, const unsigned char 
 {
     if (len > 100 && (data[0] & 0xc0) == 0xc0) {
         moloch_parsers_register(session, quic_4648_udp_parser, 0, 0);
+    }
+}
+/******************************************************************************/
+LOCAL void quic_5x_free(MolochSession_t UNUSED(*session), void *uw)
+{
+    QUIC5xInfo_t            *info          = uw;
+
+    MOLOCH_TYPE_FREE(QUIC5xInfo_t, info);
+}
+/******************************************************************************/
+LOCAL void quic_5x_udp_classify(MolochSession_t *session, const unsigned char *data, int len, int UNUSED(which), void *UNUSED(uw))
+{
+    if (len > 100 && (data[0] & 0xc0) == 0xc0) {
+        QUIC5xInfo_t *info = MOLOCH_TYPE_ALLOC(QUIC5xInfo_t);
+        info->packets = 0;
+        info->which = 1 << which;
+        moloch_parsers_register(session, quic_5x_udp_parser, info, quic_5x_free);
     }
 }
 /******************************************************************************/
@@ -276,6 +320,7 @@ LOCAL void quic_fb_tcp_classify(MolochSession_t *session, const unsigned char *U
 /******************************************************************************/
 void moloch_parser_init()
 {
+    moloch_parsers_classifier_register_udp("quic", NULL, 1, (const unsigned char *)"Q05", 3, quic_5x_udp_classify);
     moloch_parsers_classifier_register_udp("quic", NULL, 1, (const unsigned char *)"Q04", 3, quic_4648_udp_classify);
     moloch_parsers_classifier_register_udp("quic", NULL, 9, (const unsigned char *)"Q04", 3, quic_2445_udp_classify);
     moloch_parsers_classifier_register_udp("quic", NULL, 9, (const unsigned char *)"Q03", 3, quic_2445_udp_classify);
